--- a/index.html
+++ b/index.html
@@ -153,16 +153,17 @@
     </style>
 </head>
 <body>
-    <div class="header">Equitable, Relevant, and Quality Education for All</div>
+<div class="header">Equitable, Relevant, and Quality Education for All</div>
     <div class="main">
         <h1>The Educational Pipeline: Your Comprehensive Learning Platform</h1>
-        <div style="display: flex; align-items: center; justify-content: center;">
-            <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto; margin-right: 15px;">
+        <div style="display: flex; align-items: center; justify-content: space-around;">
+            <button onclick="shareWithUs()">Share with Us 📧</button>
+            <img src="https://muhumuza7325.github.io/OMD/logo.jpeg" alt="OMD Logo" style="max-width: 10%; height: auto; margin-right: 20px;">
             <a href="https://github.com/Muhumuza7325/OMD" target="_blank" title="GitHub Repository" class="github-icon">
                 <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 40px; height: 40px;">
             </a>
-        </div>        
-        <p>Your Education is our Future -------- Never despair</p>
+        </div>
+        <p style="text-align: left; margin-left: calc(50% - 10em);">Your Education is our Future -------- Never despair</p>
         <a href="https://github.com/Muhumuza7325/OMD/blob/main/README.md" target="_blank" class="download-btn">View (Android Phone)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files_wsl.rar" class="download-btn">Download (Windows 10 & 11)</a>
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
