--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@
         <a href="https://github.com/Muhumuza7325/OMD/raw/main/download_omd_files.zip" class="download-btn">Download (MacOS and Linux)</a>
         <p>Simple, fast, secure and powerful</p>
     </div>
-    <p>The educational pipeline is a non-profit and open-source initiative supported by volunteers. You can contact us through our email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=2024omd256@gmail.com" target="_blank">2024omd256@gmail.com</a> or by phone: <a href="tel:+256763956608" target="_blank">+256763956608</a> (WhatsApp), <a href="tel:+256747130325">+256747130325</a></p>
+<p>
+    The educational pipeline is a non-profit and open-source initiative supported by volunteers.
+    You can contact us through our email:
+    <a href="#" onclick="contactOmegaEmail(event)">muhumuzaomega@gmail.com</a>
+    or by phone:
+    <a href="https://wa.me/256763956608" target="_blank">+256763956608 (WhatsApp)</a>,
+    <a href="tel:+256747130325">+256747130325</a>
+</p>
     <p>Detailed installation instructions can be found in the README file included within the downloaded ZIP archive. Please refer to that file for guidance on setting up the pipeline</p>
     <div class="content">
         <section class="features">
@@ -454,13 +461,43 @@ function showLastContent() {
   }
 
 function shareWithUs() {
-            const response = "We are looking forward to receiving your economic support, thoughts, suggestions, and any files you feel should reach out to everyone of our children. Please remember to label the files you are to attach using the format: Your_name_School_Agriculture_File_content (e.g., Muhumuza_Omega_Kasule_High_School_O_level_Chemistry_Answered_EOC1_Items.pdf). Thanks a lot for your contributions.";
-            const agriculture = `${document.title} - ${new Date().toISOString().slice(0, 19).replace('T', ' ')} - Thoughts, suggestions, and contributions`;
-            const encodedAgriculture = encodeURIComponent(agriculture);
-            const encodedBody = encodeURIComponent(response);
-            const mailtoLink = `https://mail.google.com/mail/?view=cm&to=2024omd256@gmail.com&su=${encodedAgriculture}&body=${encodedBody}`;
-            window.open(mailtoLink, '_blank');
-        }
+    const response = "We are looking forward to receiving your economic support, thoughts, suggestions, and any files you feel should reach out to everyone of our children. Please remember to label the files you are to attach using the format: Your_name_School_Subject_File_content (e.g., Muhumuza_Omega_Kasule_High_School_O_level_Chemistry_Answered_EOC1_Items.pdf). Thanks a lot for your contributions.";
+    const subject = `${document.title} - ${new Date().toISOString().slice(0, 19).replace('T', ' ')} - Thoughts, suggestions, and contributions`;
+
+    const encodedSubject = encodeURIComponent(subject);
+    const encodedBody = encodeURIComponent(response);
+
+    // Gmail web link
+    const gmailLink = `https://mail.google.com/mail/?view=cm&to=2024omd256@gmail.com&su=${encodedSubject}&body=${encodedBody}`;
+    // Fallback mailto link
+    const mailtoLink = `mailto:2024omd256@gmail.com?subject=${encodedSubject}&body=${encodedBody}`;
+
+    // Detect mobile device
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+    // Open Gmail on PC, fallback to mail app on mobile
+    if (isMobile) {
+        window.location.href = mailtoLink;
+    } else {
+        window.open(gmailLink, '_blank');
+    }
+}
+
+function contactOmegaEmail(event) {
+    event.preventDefault(); // ⛔ prevent scrolling to the top
+
+    const email = "muhumuzaomega@gmail.com";
+    const gmailLink = `https://mail.google.com/mail/?view=cm&to=${email}`;
+    const mailtoLink = `mailto:${email}`;
+
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+    if (isMobile) {
+        window.location.href = mailtoLink;
+    } else {
+        window.open(gmailLink, '_blank');
+    }
+}
 
 async function openCommunication() {
   try {
