--- a/index.html
+++ b/index.html
@@ -171,12 +171,25 @@
         <p>Simple, fast, secure and powerful</p>
     </div>
 <p>
-    The educational pipeline is a non-profit and open-source initiative supported by volunteers.
-    You can contact us through our email:
-    <a href="#" onclick="contactOmegaEmail(event)">muhumuzaomega@gmail.com</a>
-    or by phone:
-    <a href="https://wa.me/256763956608" target="_blank">+256763956608 (WhatsApp)</a>,
-    <a href="tel:+256747130325">+256747130325</a>
+<p>The educational pipeline is a non-profit and open-source initiative supported by volunteers.<p>
+<p>
+  You can contact us through our contacts:
+  <a href="#" onclick="contactOmegaEmail(event)">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_(2020).svg/32px-Gmail_icon_(2020).svg.png" alt="Gmail" style="height:14px; vertical-align:middle; margin-right:4px;">
+    muhumuzaomega@gmail.com
+  </a>:
+  <a href="https://wa.me/256763956608" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="height:20px; vertical-align:middle; margin-right:4px;">
+    +256763956608
+  </a>:
+  <a href="tel:+256747130325">+256747130325</a>
+</p>
+<p>
+  You can watch the full playlist on how the Pipeline works on YouTube: 
+  <a href="https://www.youtube.com/watch?v=dkqUk8UmqGg&list=PLmbN5DXP8JrMdPucJaMh_b43HMKLXpqXL&pp=gAQB" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_(2017).svg" alt="YouTube" style="height:16px; vertical-align:middle; margin-right:4px;">
+    <span style="vertical-align:middle;">OMD | The Educational Pipeline</span>
+  </a>
 </p>
     <p>Detailed installation instructions can be found in the README file included within the downloaded ZIP archive. Please refer to that file for guidance on setting up the pipeline</p>
     <div class="content">
@@ -631,11 +644,12 @@ async function openCommunication() {
     transform: scale(1.05);
   }
 </style>
-      <p>
-        <a href="https://whatsapp.com/channel/0029VbAQnEyEKyZNRlj8Eu1K" target="_blank" style="text-decoration: none;">
-          <i class="fab fa-whatsapp" style="font-size: 1.5em; color: #25D366;"></i> Follow OMD on WhatsApp
-        </a>
-      </p>
+<p>
+  <a href="https://whatsapp.com/channel/0029VbAQnEyEKyZNRlj8Eu1K" target="_blank" style="text-decoration: none;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="height:20px; vertical-align:middle; margin-right:6px;">
+    Follow OMD on WhatsApp
+  </a>
+</p>
     <div class="footer">&copy; 2025 Your Trusted Learning Platform. All rights reserved.</div>
 </body>
 </html>
