--- a/index.html
+++ b/index.html
@@ -513,6 +513,18 @@ function contactOmegaEmail(event) {
 }
 
 async function openCommunication() {
+  const newTab = window.open('', '_blank'); // Open immediately
+
+  if (!newTab) {
+    alert('Popup blocked! Please allow popups for this site.');
+    return;
+  }
+
+  newTab.document.write(`
+    <html><head><title>Loading...</title></head><body><p>Loading communications...</p></body></html>
+  `);
+  newTab.document.close();
+
   try {
     const response = await fetch('https://raw.githubusercontent.com/Muhumuza7325/OMD/main/omd_communication.txt');
 
@@ -524,7 +536,7 @@ async function openCommunication() {
     const communications = text.split(';').map(comm => comm.trim()).filter(comm => comm !== '');
 
     if (communications.length === 0) {
-      alert('No new communications found from OMD.');
+      newTab.document.body.innerHTML = '<p>No new communications found from OMD.</p>';
       return;
     }
 
@@ -534,7 +546,7 @@ async function openCommunication() {
       </div>
     `).join('');
 
-    const newTab = window.open('', '_blank');
+    newTab.document.open();
     newTab.document.write(`
       <!DOCTYPE html>
       <html>
@@ -563,10 +575,9 @@ async function openCommunication() {
 
   } catch (error) {
     console.error('An error occurred while fetching or displaying communications:', error);
-    alert('Failed to display the latest communications from OMD.');
+    newTab.document.body.innerHTML = '<p>Failed to display the latest communications from OMD.</p>';
   }
 }
-
         function getCurrentItemText() {
             const contentBox = document.getElementById('content-box');
             return contentBox ? contentBox.innerText : '';
