--- a/omd_communication.html
+++ b/omd_communication.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OMD Communications</title>
+  <title>The Latest from OMD</title>
   <style>
    #communications {
     display: flex;
@@ -26,7 +26,7 @@
     margin: 0;
     word-break: break-word;
     line-height: 1.6;
-    font-size: 20px;
+    font-size: 18px;
    }
 
    #status {
@@ -37,10 +37,10 @@
   </style>
  </head>
  <body>
-
-  <div id="communications">
-   <p id="status">Loading communications from OMD...</p>
-  </div>
+<h1 style="text-align: center;">Today's Communications</h1>
+<div id="communications">
+  <p id="status">Loading communications from OMD...</p>
+</div>
 
   <script>
    fetch('https://raw.githubusercontent.com/Muhumuza7325/OMD/main/omd_communication.txt')
