--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </p>
 <p>
   You can watch the full playlist on how the Pipeline works on YouTube: 
-  <a href="https://www.youtube.com/watch?v=dkqUk8UmqGg&list=PLmbN5DXP8JrMdPucJaMh_b43HMKLXpqXL&pp=gAQB" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+  <a href="https://www.youtube.com/playlist?list=PLmbN5DXP8JrMdPucJaMh_b43HMKLXpqXL" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_(2017).svg" alt="YouTube" style="height:16px; vertical-align:middle; margin-right:4px;">
     <span style="vertical-align:middle;">OMD | The Educational Pipeline</span>
   </a>
