--- a/index.html
+++ b/index.html
@@ -214,14 +214,32 @@
     <div class="footer">&copy; 2025 Your Trusted Learning Platform. All rights reserved.</div>
 <div style="margin-top: 30px; padding: 20px; border: 2px solid #ccc; border-radius: 10px; max-width: 1000px; margin-left: auto; margin-right: auto; background: #f9f9f9;">
   <div style="text-align: center; margin-bottom: 15px;">
-    <label for="subjectSelect"><strong>Select Subject:</strong></label>
+    <label for="subjectSelect"><strong>Selected Items:</strong></label>
     <select id="subjectSelect" onchange="fetchContent()" style="padding: 5px 10px; font-size: 16px; margin-left: 10px;">
+      <option value="">-- Choose a subject --</option>
       <option value="CHEM">Chemistry</option>
       <option value="BIO">Biology</option>
+      <option value="PHY">Physics</option>
+      <option value="MTC">Mathematics</option>
+      <option value="ENG">English</option>
+      <option value="HIST">History</option>
+      <option value="GEO">Geography</option>
+      <!-- Add more subjects -->
     </select>
-  </div>
-  <h3 id="subject-heading" style="text-align: center;">🔬 Random Chemistry Sample</h3>
-  <div id="content-box" style="min-height: 120px; padding: 15px; font-size: 18px; background: white; border-radius: 5px; margin-bottom: 15px; line-height: 1.6;"></div>
+    <label for="openSubjectLink"><strong>Shared Resources:</strong></label>
+    <select onchange="openSubjectLink(this)" style="padding: 5px 10px; font-size: 16px; margin-left: 10px;">
+            <option value="">-- Choose a subject --</option>
+            <option value="https://archive.org/details/chemistry_omd">Chemistry</option>
+            <option value="https://archive.org/details/biology_omd">Biology</option>
+            <option value="https://archive.org/details/physics_omd">Physics</option>
+            <option value="https://archive.org/details/mathematics_omd">Mathematics</option>
+            <option value="https://archive.org/details/english_omd">English</option>
+            <option value="https://archive.org/details/history_omd">History</option>
+            <option value="https://archive.org/details/geography_omd">Geography</option>
+            <!-- Add more subjects and links as needed -->
+    </select>
+  </div><h3 id="subject-heading" style="display:none; text-align:center;"></h3>
+<div id="content-box" style="display:none; min-height:120px; padding:15px; font-size:18px; background:white; border-radius:5px; margin-bottom:15px; line-height:1.6;"></div>
   <button onclick="refreshContent()" style="margin-right: 5px;">🔄 Refresh</button>
   <button onclick="saveToFavourites()" style="margin-right: 5px;">⭐ Favourite</button>
   <button onclick="copyToClipboard()" style="margin-right: 5px;">📋 Copy</button>
@@ -254,9 +272,10 @@
   let currentIndex = null;
   let selectedFiles = []; // To track selected files
 
-  function getSubject() {
-    return document.getElementById('subjectSelect')?.value || 'CHEM';
-  }
+function getSubject() {
+  const value = document.getElementById('subjectSelect')?.value;
+  return value === '' ? null : value;
+}
 
   function getStorageKey() {
     return `shown_${getSubject().toLowerCase()}_lines`;
@@ -270,12 +289,39 @@
     return `selected_${getSubject().toLowerCase()}_files`;
   }
 
-  async function fetchContent() {
-    const subject = getSubject();
+    function openSubjectLink(select) {
+        const url = select.value;
+        if (url) {
+            window.open(url, '_blank'); // Opens in a new tab
+            select.selectedIndex = 0; // Reset selection
+        }
+    }
+
+async function fetchContent() {
+  const subject = getSubject();
+  if (!subject) {
+    // Hide content and heading if no subject selected
+    document.getElementById('subject-heading').style.display = 'none';
+    document.getElementById('content-box').style.display = 'none';
+    return;
+  }
     const apiUrl = `https://api.github.com/repos/Muhumuza7325/OMD/contents/${subject}`;
 
-    document.getElementById('subject-heading').textContent =
-      subject === 'CHEM' ? '🔬 Random Chemistry Sample' : '🧬 Random Biology Sample';
+const subjectHeadings = {
+  CHEM: '🔬 Random Chemistry Sample',
+  BIO: '🧬 Random Biology Sample',
+  PHY: '⚛️ Random Physics Sample',
+  MTC: '📐 Random Mathematics Sample',
+  ENG: '📚 Random English Sample',
+  HIST: '🏺 Random History Sample',
+  GEO: '🌍 Random Geography Sample'
+};
+
+document.getElementById('subject-heading').textContent =
+  subjectHeadings[subject] || '📘 Random Subject Sample';
+
+document.getElementById('subject-heading').style.display = 'block';
+document.getElementById('content-box').style.display = 'block';
 
     try {
       const response = await fetch(apiUrl);
@@ -287,7 +333,7 @@
       );
 
       if (sampleFiles.length === 0) {
-        document.getElementById('content-box').textContent = '⚠️ No matching sample files found.';
+        document.getElementById('content-box').textContent = '⚠️ No matching sample files found!';
         return;
       }
 
@@ -311,7 +357,7 @@
       }
 
       if (!fileToLoad) {
-        document.getElementById('content-box').textContent = '⚠️ Error selecting a sample file.';
+        document.getElementById('content-box').textContent = '⚠️ Error selecting a sample file!';
         return;
       }
 
@@ -323,7 +369,7 @@
       lines = text.split('\n').map(line => line.trim()).filter(line => line !== '' && line !== '*' && !line.startsWith('Chapter'));
 
       if (lines.length === 0) {
-        document.getElementById('content-box').textContent = '⚠️ Sample file is empty.';
+        document.getElementById('content-box').textContent = '⚠️ Sample file is empty!';
         return;
       }
 
@@ -407,7 +453,6 @@ function showLastContent() {
     document.getElementById('search-container').style.display = 'none';
   }
 }
-
 
   function copyToClipboard() {
     const content = document.getElementById('content-box').innerText;
