--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
     <label for="openSubjectLink"><strong>Shared Resources:</strong></label>
     <select onchange="openSubjectLink(this)" style="padding: 5px 10px; font-size: 16px; margin-left: 10px;">
             <option value="">-- Choose a subject --</option>
-            <option value="https://archive.org/details/chemistry_omd">Chemistry</option>
-            <option value="https://archive.org/details/biology_omd">Biology</option>
+            <option value="https://drive.google.com/drive/folders/1e4H9RIndg9Z7Hyc13n84VNwuwIJFv21t">Chemistry</option>
+            <option value="https://drive.google.com/drive/folders/1hgNwwQ3prhAwktnrztKo4xbJvzN172hA">Biology</option>
             <option value="https://archive.org/details/physics_omd">Physics</option>
             <option value="https://archive.org/details/mathematics_omd">Mathematics</option>
             <option value="https://archive.org/details/english_omd">English</option>
