--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
             <option value="">-- Choose a subject --</option>
             <option value="https://drive.google.com/drive/folders/1e4H9RIndg9Z7Hyc13n84VNwuwIJFv21t">Chemistry</option>
             <option value="https://drive.google.com/drive/folders/1hgNwwQ3prhAwktnrztKo4xbJvzN172hA">Biology</option>
-            <option value="https://archive.org/details/physics_omd">Physics</option>
-            <option value="https://archive.org/details/mathematics_omd">Mathematics</option>
-            <option value="https://archive.org/details/english_omd">English</option>
-            <option value="https://archive.org/details/history_omd">History</option>
-            <option value="https://archive.org/details/geography_omd">Geography</option>
+            <option value="https://drive.google.com/drive/folders/1oOTF-jV4DOURu2OvCO4OLvTgEgJbPMGE">Physics</option>
+            <option value="https://drive.google.com/drive/folders/1SrCvMZHB0YudZLpTcDGkbNRynQ71MKwm">Mathematics</option>
+            <option value="https://drive.google.com/drive/folders/1ruHqYQ-ton6SimMqKB9dq0Ux0z0hGTps">English</option>
+            <option value="https://drive.google.com/drive/folders/1VN3OVA7hJXIiMQNbSWWJkJHKs-c3FoUL">History</option>
+            <option value="https://drive.google.com/drive/folders/1sfea5iDT9k0qiupfApCkhWIuzm-O3BEI">Geography</option>
             <!-- Add more subjects and links as needed -->
     </select>
   </div><h3 id="subject-heading" style="display:none; text-align:center;"></h3>
