--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:image" content="https://muhumuza7325.github.io/OMD/logo.jpeg">
     <meta property="og:url" content="https://muhumuza7325.github.io/OMD/">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://muhumuza7325.github.io/OMD/logo.jpeg" type="image/jpeg">
+    <link rel="icon" type="image/png" href="https://muhumuza7325.github.io/OMD/logo.png">
+    <link rel="shortcut icon" href="https://muhumuza7325.github.io/OMD/logo.ico" type="image/x-icon">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
